fix tie-turn render jump

--- a/src/index.css
+++ b/src/index.css
@@ -156,7 +156,7 @@ body {
 }
 
 .App footer button {
-  padding: 8px 12px;
+  padding: 10px 12px;
   background: #1a1a1a;
   border: 2px solid rgba(255, 255, 255, 0.87);
   color: rgba(255, 255, 255, 0.87);
